[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Karl Gildenhuys"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cpal = "0.17.1"
wasm-bindgen = "0.2"
